<resources>
    <string name="app_name">Cock\'Tail</string>
    <string name="url_prefix_recherche">https://www.google.fr/search?q=Où boire le cocktail </string>
    <string name="ou_en_boire">Où en boire ?</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_random">Aléatoire</string>
    <string name="category_prompt">Recherche par catégorie</string>
    <string name="glass_prompt">Recherche par verre</string>
    <string name="ingredient_prompt">Recherche par ingrédient</string>
    <string name="submit">Rechercher</string>
    <string name="name_search">Nom</string>
    <string name="category">Catégorie</string>
    <string name="glass">Verre</string>
    <string name="ingredient">Ingrédient</string>

    <string name="name_label">Nom :</string>
    <string name="category_label">Catégorie :</string>
    <string name="alcoholic_label">Alcolisé :</string>
    <string name="glass_label">Verre :</string>
    <string name="instructions_label">Instructions :</string>
    <string name="ingredients_label">Ingregients :</string>

    <string name="notification">Notification Cock\'Tail</string>
    <string name="notification_title">A propos de Cock\'Tail</string>
    <string name="notification_desc">Toutes les infos sur l\'appli Cock\'Tail</string>

    <string name="about">
        Cette application regroupe des recettes de cocktails\n
        \n
        Application développée par :\n
        Pierre MARTIN (4A CFA)\n
        Bastien NICOLAS (4A CFA)\n
        \n
        Lien github : https://github.com/MartinPie/INF4041_MARTIN_NICOLAS.git
    </string>
</resources>
