<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.esiea.martin_nicolas.projetmobiles3.SearchActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_search"
        android:inputType="text"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchCategory"
        android:spinnerMode="dialog"
        android:prompt="@string/category_prompt"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchGlass"
        android:spinnerMode="dialog"
        android:prompt="@string/glass_prompt"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchIngredient"
        android:spinnerMode="dialog"
        android:prompt="@string/ingredient_prompt"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="15sp"
      />

</LinearLayout>
